	exmpp_xml.

	* src/client/exmpp_client_binding.erl (announced_support): Fix a bug
	where true was returned when the support was not announced.

	* src/server/exmpp_server_session.erl: Add a function to report an
	error.

	* src/client/exmpp_client_session.erl: Add a function to check if the
	feature was announced. Use exmpp_internals:random_id/1 for IDs.

2008-04-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_error.erl, src/core/exmpp_stanza.erl,
	src/core/exmpp_iq.erl, src/core/exmpp_stream.erl,
	src/server/exmpp_server_binding.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/client/exmpp_client_binding.erl,
	src/client/exmpp_client_legacy_auth.erl, src/Makefile.am,
	src/Emakefile.in, ebin/Makefile.am, ebin/exmpp.app.in,
	doc/Makefile.am: Rename exmpp_error to exmpp_stanza.

	* src/core/exmpp_jlib.erl, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Remove
	exmpp_jlib.

	* src/core/exmpp_internals.erl: Add functions to generale a random ID.

	* src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl,
	src/client/exmpp_client_binding.erl: Use exmpp_internals for random
	ID.

	* src/core/exmpp_iq.erl: Add functions to access request and result
	contained in an IQ.

	* src/server/exmpp_server_legacy_auth.erl,
	src/client/exmpp_client_legacy_auth.erl: Modify and add functions to
	better handle legacy authentication. It's now possible to tell which
	fields to propose from the server side and get credentials from the
	stanza sent by the client. From the client side, the password stanza
	is built based on the fields supported by the server.

	* testsuite/check_legacy_auth.erl: Update testsuite for
	exmpp_server_legacy_auth and exmpp_client_legacy_auth.

2008-04-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Second round of commits for the Big Cleanup.

	* src/server/exmpp_server_binding.erl,
	src/client/exmpp_client_binding.erl,
	src/server/exmpp_server_compression.erl,